@@ -43,11 +43,11 @@ namespace lullaby
 
 		// Load the module.
 		plug = ModPlug_Load(data->getData(), data->getSize());
-
-		ModPlug_SetMasterVolume(plug, 512);
-
+		
 		if(plug == 0)
 			throw love::Exception("Could not load file with ModPlug.");
+
+		ModPlug_SetMasterVolume(plug, 512);
 	}
 
 	ModPlugDecoder::~ModPlugDecoder()
